# A.S.C.E.N.D

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  LICENSE  Main.qml  README.md  SolverBridge.cpp  SolverBridge.h  TemplateBridge.cpp  TemplateBridge.h  TemplateData.h  TemplateStorage.cpp  TemplateStorage.h  app_icon.rc  main.cpp
core/: config.cpp  config.h  input.cpp  input.h  solver.cpp  solver.h  util.cpp  util.h
